# cycu_oop_11022323

./: LICENSE  README.md  bus_route.html  bus_stop_129828.html  bus_stop_129829.html  bus_stop_218023.html  bus_stop_36021.html  bus_stop_36022.html  bus_stop_36023.html  bus_stop_36024.html  bus_stop_36025.html  bus_stop_36026.html  bus_stop_36027.html  bus_stop_36028.html  bus_stop_36029.html  bus_stop_36030.html  bus_stop_36031.html  bus_stop_36032.html  bus_stop_36033.html  bus_stop_36034.html  bus_stop_36036.html  bus_stop_36038.html  bus_stop_36039.html  bus_stop_36040.html  bus_stop_36041.html  bus_stop_36042.html  bus_stop_36043.html  bus_stop_36044.html  bus_stop_36045.html  bus_stop_36046.html  bus_stop_36047.html  bus_stop_36048.html  bus_stop_36049.html  bus_stop_36050.html  bus_stop_36051.html  bus_stop_36052.html  bus_stop_36053.html  bus_stop_36054.html  bus_stop_36055.html  bus_stop_36056.html  (+65 more)
20250401/: 20250401_1.py  20250401_2.py  20250401_3.py
20250506/: pyproject.toml  requirement.txt
20250506/src/cycu11022323/: ebus_taipei.py
20250506_test/: cycu11022203-2025.5.6.tar  ebus_taipei.py  test_11022203.py
20250520/: bus_route_10417_tteback.csv  bus_route_10417_ttego.csv  fail_subjects_students.py  failing_students.csv  geopandas_matplotlib_demo.py  hw2.py  hw3.py  midterm_scores.csv  pandas_demo.py  top5_students.py
20250520/county_mol/: COUNTY_MOI_1140318.dbf  COUNTY_MOI_1140318.shp.xml  (+3 more)
20250603/: HW2.csv  hw1_unique_utf8.csv  taipei_ebus.py
data/: 311.xlsx  hermes_ebus_taipei.sqlite3  hermes_ebus_taipei_route_list.html
midtern_exam/: 1.py
(+1 files in other folders)
