[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cycu11022323"
version = "2025.05.06"
description = "A short description of the cycu11022323 package"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name="楊秉儒", email="passepied617@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "greenlet==3.2.1",
    "numpy==2.2.5",
    "pandas==2.2.3",
    "playwright==1.52.0",
    "pyee==13.0.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "SQLAlchemy==2.0.40",
    "typing_extensions==4.13.2",
    "tzdata==2025.2"
]

[project.urls]
"Homepage" = "https://your-homepage-url.com"
"Source" = "https://github.com/your-username/your-repo"